--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       </div>
     </section>
 
-    <!--education section ----------------------------------------------------------------------------------------------------->
+    <!--education section----------------------------------------------------------------------------------------------------->
     <section id="education" class="education">
       <div class="main-text scroll-scale">
         <span>my academic background</span>
@@ -208,7 +208,7 @@
       </div>
     </section>
 
-    <!--serivces section ----------------------------------------------------------------------------------------------------->
+    <!--serivces section----------------------------------------------------------------------------------------------------->
     <section id="services" class="services">
       <div class="main-text scroll-scale">
         <span>what i will do for you</span>
@@ -254,7 +254,7 @@
       </div>
     </section>
 
-    <!--skill section ----------------------------------------------------------------------------------------------------->
+    <!--skill section----------------------------------------------------------------------------------------------------->
     <section id="skills" class="skills">
       <div class="main-text scroll-scale">
         <span>technical and professional</span>
