--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
       </div>
     </section>
 
-    <!--projects section ----------------------------------------------------------------------------------------------------->
+    <!--projects section----------------------------------------------------------------------------------------------------->
     <section id="projects" class="projects">
       <div class="main-text scroll-scale">
         <span>What i will do for you</span>
