Change in the location of education section logo

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <!-- School 1 -->
         <div class="service-box">
           <img
-            src="/img/Brainware_University.png"
+            src="img/Brainware_University.png"
             alt="School 1 Logo"
             style="width: 100px; margin-bottom: 15px"
           />
@@ -179,7 +179,7 @@
         <!-- School 2 -->
         <div class="service-box">
           <img
-            src="/img/tajpur_school.png"
+            src="img/tajpur_school.png"
             alt="School 2 Logo"
             style="width: 100px; margin-bottom: 15px"
           />
@@ -194,7 +194,7 @@
         <!-- School 3 -->
         <div class="service-box">
           <img
-            src="/img/Emblem-Ramakrishna-Mission.png"
+            src="img/Emblem-Ramakrishna-Mission.png"
             alt="School 3 Logo"
             style="width: 100px; margin-bottom: 15px"
           />
