Text change in HTML and Styling change in CSS

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="info-about2">
           <span>7+</span>
-          <p>Project Completee</p>
+          <p>Project Completed</p>
         </div>
         <div class="info-about3">
           <span>20+</span>
@@ -211,8 +211,8 @@
     <!--serivces section----------------------------------------------------------------------------------------------------->
     <section id="services" class="services">
       <div class="main-text scroll-scale">
-        <span>what i will do for you</span>
-        <h2>Our Services</h2>
+        <span>What I Do</span>
+        <h2>My Services</h2>
       </div>
 
       <div class="section-services scroll-bottom">
@@ -355,7 +355,7 @@
         <div class="fillter-buttons scroll-scale">
           <button class="button" data-filter="all">All</button>
           <button class="button" data-filter=".product">Product</button>
-          <button class="button" data-filter=".inter">Interacting</button>
+          <button class="button" data-filter=".inter">Interactive</button>
           <button class="button" data-filter=".web">Web App</button>
         </div>
 
