Change Comments in index.html

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
       </div>
     </section>
 
-    <!--Contact section ----------------------------------------------------------------------------------------------------->
+    <!--Contact section----------------------------------------------------------------------------------------------------->
 
     <section id="contact" class="contact">
       <div class="main-text scroll-scale">
